cropped background image, made it repeat to avoid stretching, aesthetically more pleasing

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@
 }
 
 body {
-  background-size: 100% 100%;
+  background-repeat: repeat;
 }
 
 h1 {
